syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "protobuf/gogoproto/gogo.proto";

package storage;

message Risk {
    string id                       = 1;
    RiskEntityMeta entity           = 2;
    // score represents risk score obtained only from entity's individual risk factors
    float score                     = 3 [(gogoproto.moretags) = "search:\"Risk Score,store,hidden\""];
    // aggregate_score represents risk score obtained by aggregation of dependent entities' risk and individual risk factors
    float aggregate_score           = 5 [(gogoproto.moretags) = "search:\"Aggregate Risk Score,store,hidden\""];

    message Result {
        message Factor {
            string message          = 1;
            string url              = 2;
        }
        string name                 = 1 [(gogoproto.moretags) = "search:\"Risk Indicator,store,hidden\""];
        repeated Factor factors     = 2;
        float score                 = 3;
    }
    repeated Result results         = 4;
}

message RiskEntityMeta {
    string id                   = 1 [(gogoproto.moretags) = "search:\"Risk Entity ID,store,hidden\""];
    string namespace_id         = 5 [(gogoproto.moretags) = "search:\"Namespace ID,store,hidden\""];
    string namespace            = 2 [(gogoproto.moretags) = "search:\"Namespace,store\""];
    string cluster_id           = 3 [(gogoproto.moretags) = "search:\"Cluster ID,store,hidden\""];
    RiskEntityType type        = 4 [(gogoproto.moretags) = "search:\"Risk Entity Type,store,hidden\""];
}

enum RiskEntityType {
    UNKNOWN                 = 0;
    DEPLOYMENT              = 1;
    NAMESPACE               = 2;
    CLUSTER                 = 3;
    IMAGE                   = 4;
    SERVICEACCOUNT          = 5;
}
